--- a/index.html
+++ b/index.html
@@ -1,133 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rana Chicken Shop Dashboard</title>
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom font for the entire body */
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        /* Gradient for the header */
-        .header-bg {
-            background: linear-gradient(90deg, #1d71d8 0%, #3b82f6 100%);
-        }
+      body {
+        font-family: "Inter", sans-serif;
+      }
+      .header-bg {
+        background: linear-gradient(90deg, #1d71d8 0%, #3b82f6 100%);
+      }
     </style>
-</head>
-<body class="bg-slate-100 text-gray-900">
-
+  </head>
+  <body class="bg-slate-100 text-gray-900">
     <!-- Header -->
-    <header class="header-bg text-white p-6 md:px-10 lg:px-20 flex justify-between items-center flex-wrap shadow-lg rounded-b-3xl">
-        <div class="flex items-center gap-4">
-            <i class="fas fa-drumstick-bite text-3xl"></i>
-            <h1 class="text-3xl font-extrabold">Rana Chicken Shop</h1>
+    <header
+      class="header-bg fixed top-0 left-0 w-full z-50 text-white shadow-lg rounded-b-3xl"
+    >
+      <div
+        class="mx-auto px-4 sm:px-6 lg:px-10 py-6 flex flex-col md:flex-row items-center justify-between gap-4"
+      >
+        <!-- Logo + Title -->
+        <div class="flex items-center gap-3">
+          <i class="fas fa-drumstick-bite text-2xl md:text-3xl"></i>
+          <h1 class="text-2xl md:text-3xl font-extrabold whitespace-nowrap">
+            Rana Chicken Shop
+          </h1>
         </div>
-        <button class="px-5 py-2 bg-white text-blue-600 rounded-full font-semibold text-sm transition-all duration-300 hover:bg-slate-200 hover:scale-105 shadow-md mt-4 md:mt-0 flex items-center gap-2">
-            <i class="fas fa-envelope"></i> Contact Us
+
+        <!-- Contact Button -->
+        <button
+          class="bg-white text-blue-600 px-5 py-2 rounded-full font-semibold text-sm hover:bg-slate-200 hover:scale-105 transition-all shadow-md flex items-center gap-2"
+        >
+          <i class="fas fa-envelope"></i> Contact Us
         </button>
+      </div>
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto p-6 md:p-8 lg:p-10">
-        <h2 class="text-3xl font-bold text-gray-800 mb-2">Overview</h2>
-        <p class="text-gray-500 mb-8">Real-time insights into your chicken shop operations</p>
+    <main class="container mx-auto pt-40 p-6 md:p-8 lg:p-10 md:mt-20">
+      <h2 class="text-3xl font-bold text-gray-800 mb-2">Overview</h2>
+      <p class="text-gray-500 mb-8">
+        Real-time insights into your chicken shop operations
+      </p>
 
-        <!-- Dashboard Cards with Colorful Backgrounds -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
-            <!-- Trucks Arrived Card -->
-            <div class="bg-blue-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl cursor-pointer">
-                <div class="flex flex-col">
-                    <div class="text-sm mb-1 text-white">Trucks Arrived</div>
-                    <div class="text-4xl font-bold text-white">0</div>
-                    <div class="text-xs mt-1 text-white">+2 from yesterday</div>
-                </div>
-                <div class="text-4xl text-white"><i class="fas fa-truck"></i></div>
+      <!-- Dashboard Cards -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
+        <a href="/truckArival.html">
+          <div
+            class="bg-blue-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transition-transform hover:scale-105 hover:shadow-2xl cursor-pointer"
+          >
+            <div>
+              <p class="text-sm text-white">Trucks Arrived</p>
+              <p class="text-4xl font-bold text-white">0</p>
+              <p class="text-xs text-white">+2 from yesterday</p>
             </div>
+            <i class="fas fa-truck text-4xl text-white"></i>
+          </div>
+        </a>
 
-            <!-- Sales Card -->
-            <div class="bg-amber-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl cursor-pointer">
-                <div class="flex flex-col">
-                    <div class="text-sm text-white mb-1">Sales</div>
-                    <div class="text-4xl font-bold text-white">0</div>
-                    <div class="text-xs text-white mt-1">0 deliveries</div>
-                </div>
-                <div class="text-4xl text-white"><i class="fas fa-box-open"></i></div>
+        <a href="/sales.html">
+          <div
+            class="bg-amber-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transition-transform hover:scale-105 hover:shadow-2xl cursor-pointer"
+          >
+            <div>
+              <p class="text-sm text-white">Sales</p>
+              <p class="text-4xl font-bold text-white">0</p>
+              <p class="text-xs text-white">0 deliveries</p>
             </div>
+            <i class="fas fa-box-open text-4xl text-white"></i>
+          </div>
+        </a>
 
-            <!-- Customers Card -->
-            <div class="bg-green-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl cursor-pointer">
-                <div class="flex flex-col">
-                    <div class="text-sm text-white mb-1">Customers</div>
-                    <div class="text-4xl font-bold text-white">0</div>
-                    <div class="text-xs text-white mt-1">0 transactions</div>
-                </div>
-                <div class="text-4xl text-white"><i class="fas fa-dolly"></i></div>
+        <a href="/customer.html">
+          <div
+            class="bg-green-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transition-transform hover:scale-105 hover:shadow-2xl cursor-pointer"
+          >
+            <div>
+              <p class="text-sm text-white">Customers</p>
+              <p class="text-4xl font-bold text-white">0</p>
+              <p class="text-xs text-white">0 transactions</p>
             </div>
+            <i class="fas fa-dolly text-4xl text-white"></i>
+          </div>
+        </a>
 
-            <!-- Reports Card -->
-            <div class="bg-yellow-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl cursor-pointer">
-                <div class="flex flex-col">
-                    <div class="text-sm text-white mb-1">Reports</div>
-                    <div class="text-4xl font-bold text-white">0</div>
-                    <div class="text-xs text-white mt-1">0 transactions</div>
-                </div>
-                <div class="text-4xl text-white"><i class="fas fa-store"></i></div>
-            </div>
+        <a href="/reports.html">
+        <div
+          class="bg-yellow-500 rounded-2xl p-6 flex justify-between items-center shadow-lg transition-transform hover:scale-105 hover:shadow-2xl cursor-pointer"
+        >
+          <div>
+            <p class="text-sm text-white">Reports</p>
+            <p class="text-4xl font-bold text-white">0</p>
+            <p class="text-xs text-white">0 transactions</p>
+          </div>
+          <i class="fas fa-store text-4xl text-white"></i>
+        </div>
+      </div>
+       </a>
+      <!-- Inventory Section -->
+      <div class="bg-white rounded-2xl p-8 shadow-md mb-10">
+        <h3 class="text-xl font-bold text-gray-800 mb-6">
+          Current Inventory Status
+        </h3>
+        <div
+          class="bg-slate-50 rounded-xl p-6 flex justify-between items-center text-lg mb-6"
+        >
+          <div class="flex items-center gap-2 font-semibold text-gray-700">
+            <i class="fas fa-boxes"></i> Available Stock
+          </div>
+          <span class="text-2xl font-bold text-emerald-600">0 kg</span>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+          <div class="bg-blue-100 text-blue-800 p-6 rounded-xl text-center">
+            <p class="text-sm font-semibold">Received Today</p>
+            <p class="text-2xl font-bold mt-2">0 kg</p>
+          </div>
+          <div class="bg-orange-100 text-orange-800 p-6 rounded-xl text-center">
+            <p class="text-sm font-semibold">Sold Today</p>
+            <p class="text-2xl font-bold mt-2">0 kg</p>
+          </div>
+          <div class="bg-green-100 text-green-800 p-6 rounded-xl text-center">
+            <p class="text-sm font-semibold">Remaining</p>
+            <p class="text-2xl font-bold mt-2">0 kg</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Info Boxes -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="bg-white p-6 rounded-xl shadow-md">
+          <div
+            class="flex items-center gap-2 text-xl font-semibold text-gray-800 mb-4"
+          >
+            <i class="fas fa-truck text-blue-500"></i> Recent Truck Arrivals
+          </div>
+          <p class="text-gray-500 text-sm">No truck arrivals today.</p>
         </div>
 
-        <!-- Inventory Status Section -->
-        <div class="bg-white rounded-2xl p-6 shadow-sm mb-10">
-            <h3 class="text-xl font-bold text-gray-800 mb-6">Current Inventory Status</h3>
-            
-            <div class="bg-slate-50 rounded-xl p-6 flex justify-between items-center flex-wrap text-lg mb-6">
-                <div class="flex items-center gap-2 font-semibold text-gray-700">
-                    <i class="fas fa-boxes"></i> Available Stock
-                </div>
-                <span class="text-2xl font-bold text-emerald-600">0 kg</span>
-            </div>
-
-            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-                <!-- Received Status Box -->
-                <div class="bg-blue-100 text-blue-800 p-6 rounded-xl text-center shadow-sm">
-                    <div class="text-sm font-semibold">Received Today</div>
-                    <div class="text-2xl font-bold mt-2">0 kg</div>
-                </div>
-                <!-- Sold Status Box -->
-                <div class="bg-orange-100 text-orange-800 p-6 rounded-xl text-center shadow-sm">
-                    <div class="text-sm font-semibold">Sold Today</div>
-                    <div class="text-2xl font-bold mt-2">0 kg</div>
-                </div>
-                <!-- Remaining Status Box -->
-                <div class="bg-green-100 text-green-800 p-6 rounded-xl text-center shadow-sm">
-                    <div class="text-sm font-semibold">Remaining</div>
-                    <div class="text-2xl font-bold mt-2">0 kg</div>
-                </div>
-            </div>
+        <div class="bg-white p-6 rounded-xl shadow-md">
+          <div
+            class="flex items-center gap-2 text-xl font-semibold text-gray-800 mb-4"
+          >
+            <i class="fas fa-user-friends text-purple-500"></i> Permanent
+            Customers
+          </div>
+          <p class="text-gray-500 text-sm">
+            No permanent customers registered.
+          </p>
         </div>
-
-        <!-- Additional Info Sections -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <!-- Recent Truck Arrivals Box -->
-            <div class="bg-white p-6 rounded-xl shadow-md">
-                <div class="flex items-center gap-2 text-xl font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-truck text-blue-500"></i> Recent Truck Arrivals
-                </div>
-                <div class="text-gray-500 text-sm">No truck arrivals today.</div>
-            </div>
-
-            <!-- Permanent Customers Box -->
-            <div class="bg-white p-6 rounded-xl shadow-md">
-                <div class="flex items-center gap-2 text-xl font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-user-friends text-purple-500"></i> Permanent Customers
-                </div>
-                <div class="text-gray-500 text-sm">No permanent customers registered.</div>
-            </div>
-        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
